--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -1,1 +1,22 @@
-Hello World
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Algolia - Backend InstantSearch</title>
+</head>
+
+<body>
+    <div>
+        <form action="">
+            <input type="text" placeholder="Type a query">
+            <button>Search</button>
+        </form>
+        <p id="message-one"></p>
+        <p id="message-two"></p>
+    </div>
+    <script src="/js/app.js"></script>
+</body>
+
+</html>
