--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -8,6 +8,29 @@
 </head>
 
 <body>
+      <header class="header">
+    <h1 class="header-title">
+      <a href="/">Backend instantsearch.js-app</a>
+    </h1>
+    <p class="header-subtitle">
+      using
+      <a href="https://github.com/algolia/instantsearch.js">
+        InstantSearch.js
+      </a>
+    </p>
+  </header>
+
+  <div class="container">
+    <div class="search-panel">
+      <div class="search-panel__filters">
+      </div>
+
+      <div class="search-panel__results">
+        <div id="searchbox"></div>
+      </div>
+    </div>
+  </div>
+
     <div>
         <form action="">
             <input type="text" placeholder="Type a query">
@@ -16,6 +39,8 @@
         <p id="message-one"></p>
         <p id="message-two"></p>
     </div>
+    <script src="https://cdn.jsdelivr.net/npm/algoliasearch@4.5.1/dist/algoliasearch-lite.umd.js" integrity="sha256-EXPXz4W6pQgfYY3yTpnDa3OH8/EPn16ciVsPQ/ypsjk=" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/instantsearch.js@4.8.3/dist/instantsearch.production.min.js" integrity="sha256-LAGhRRdtVoD6RLo2qDQsU2mp+XVSciKRC8XPOBWmofM=" crossorigin="anonymous"></script>
     <script src="/js/app.js"></script>
 </body>
 
