--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -31,14 +31,14 @@
     </div>
   </div>
 
-    <div>
+    {{!-- <div>
         <form action="">
             <input type="text" placeholder="Type a query">
             <button>Search</button>
         </form>
         <p id="message-one"></p>
         <p id="message-two"></p>
-    </div>
+    </div> --}}
     <script src="https://cdn.jsdelivr.net/npm/algoliasearch@4.5.1/dist/algoliasearch-lite.umd.js" integrity="sha256-EXPXz4W6pQgfYY3yTpnDa3OH8/EPn16ciVsPQ/ypsjk=" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/instantsearch.js@4.8.3/dist/instantsearch.production.min.js" integrity="sha256-LAGhRRdtVoD6RLo2qDQsU2mp+XVSciKRC8XPOBWmofM=" crossorigin="anonymous"></script>
     <script src="/js/app.js"></script>
