--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -27,6 +27,7 @@
 
       <div class="search-panel__results">
         <div id="searchbox"></div>
+        <div id="hits"></div>
       </div>
     </div>
   </div>
