--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -4,6 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/instantsearch.css@7/themes/algolia-min.css">
+    <link rel="stylesheet" href="/css/index.css">
+    <link rel="stylesheet" href="/css/app.css">
+
     <title>Algolia - Backend InstantSearch</title>
 </head>
 
@@ -23,6 +28,7 @@
   <div class="container">
     <div class="search-panel">
       <div class="search-panel__filters">
+        <div id="brand-list"></div>
       </div>
 
       <div class="search-panel__results">
@@ -30,16 +36,8 @@
         <div id="hits"></div>
       </div>
     </div>
+    <div id="pagination"></div>
   </div>
-
-    {{!-- <div>
-        <form action="">
-            <input type="text" placeholder="Type a query">
-            <button>Search</button>
-        </form>
-        <p id="message-one"></p>
-        <p id="message-two"></p>
-    </div> --}}
     <script src="https://cdn.jsdelivr.net/npm/algoliasearch@4.5.1/dist/algoliasearch-lite.umd.js" integrity="sha256-EXPXz4W6pQgfYY3yTpnDa3OH8/EPn16ciVsPQ/ypsjk=" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/instantsearch.js@4.8.3/dist/instantsearch.production.min.js" integrity="sha256-LAGhRRdtVoD6RLo2qDQsU2mp+XVSciKRC8XPOBWmofM=" crossorigin="anonymous"></script>
     <script src="/js/app.js"></script>
